--- a/css/style.css
+++ b/css/style.css
@@ -334,7 +334,7 @@
 }
 
 .team{
-  background: url(../img/header-bg.png) no-repeat center center / 100%;
+  background: url(../img/team-bg.png) 0 0/cover no-repeat;
   height: 675px;
 }
 
@@ -415,6 +415,12 @@
   font-size: 12px;
   line-height: 20px;
   cursor: pointer;
+  transition: all 500ms;
+}
+
+.button-success:hover{
+  background: rgb(179, 170, 170);
+  transition: all 500ms;
 }
 
 .booking{
@@ -459,7 +465,7 @@
 }
 
 .specialties{
-  background: url(../img/specialtys-bggg.png) no-repeat center center / 100%;
+  background: url(../img/specialtys-bggg.png) 0 0/cover no-repeat;
   height: 675px;
 }
 
@@ -500,6 +506,10 @@
   margin-right: 40px;
 }
 
+.delicious-item-clone{
+  display: none;
+}
+
 .delicious-link{
   text-decoration: none;
   font-family: Open Sans;
@@ -508,6 +518,12 @@
   line-height: 18px;
   color: #333333;
   margin-right: 40px;
+  transition: all 500ms;
+}
+
+.delicious-link:hover{
+  border-bottom: 1px solid rgb(179, 170, 170);
+  transition: all 500ms;
 }
 
 .restaurant-menu{
@@ -546,7 +562,7 @@
 }
 
 .private-events{
-  background: url(../img/specialtys-bggg.png) no-repeat center center / 100%;
+  background: url(../img/specialtys-bggg.png) 0 0/cover no-repeat;
   height: 675px;
 }
 
@@ -580,8 +596,7 @@
 }
 
 .galerie-img{
-  width: 477.5px;
-  height: 477.5px;
+  width: 25%;
 }
 
 .contact-information{
@@ -637,6 +652,12 @@
   font-size: 12px;
   line-height: 20px;
   cursor: pointer;
+  transition: all 500ms;
+}
+
+.button-send-message:hover{
+  background: rgb(179, 170, 170);
+  transition: all 500ms;
 }
 
 .footer{
@@ -699,6 +720,14 @@
     height: 698px;
     top: 105px;
   }
+
+  .block-img{
+    width: 80%;
+  }
+
+  .galerie-img{
+    width: 25%;
+  }
 }
 
 @media(max-width: 1440px){
@@ -738,6 +767,10 @@
     height: 692px;
     right: 290px;
   }
+
+  .galerie-img{
+    width: 25%;
+  }
 }
 
 @media(max-width: 1350px){
@@ -769,6 +802,75 @@
 
   .schedule-text{
     margin-right: 20px;
+  }
+
+  .main-block{
+    display: block;
+  }
+
+  .block-image{
+    margin-top: 50px;
+  }
+
+  .block-img{
+    width: 25%;
+  }
+
+  .header-block{
+    height: 50px;
+  }
+
+  .night{
+    padding-bottom: 37px;
+  }
+
+  .name-block{
+    margin-bottom: 0;
+    margin-top: 20px;
+  }
+
+  .swiper-slide{
+    display: block;
+    padding-bottom: 38px;
+  }
+
+  .pricelist-text-bold{
+    font-size: 15px;
+  }
+
+  .pricelist-text-normal{
+    font-size: 10px;
+  }
+
+  .events{
+    display: flex;
+    padding-right: 15px;
+    padding-left: 15px;
+  }
+
+  .img-events{
+    width: 100%;
+  }
+
+  .contact-information{
+    max-width: 1000px;
+    margin: auto;
+  }
+
+  .input-contact{
+    width: 320px;
+  }
+
+  .input-contact:last-child{
+    width: 980px;
+  }
+
+  .button-image{
+    max-width: 1000px;
+  }
+
+  .button-send-message{
+    width: 340px;
   }
 }
 
@@ -827,11 +929,51 @@
   .social-border{
     display: none;
   }
+
+  .information-input{
+    display: block;
+  }
+
+  .input-block{
+    width: auto;
+  }
+
+  .img-events{
+    width: 105%;
+  }
+
+  .contact-information{
+    max-width: 950px;
+    margin: auto;
+  }
+
+  .input-contact{
+    width: 310px;
+  }
+
+  .input-contact:last-child{
+    width: 950px;
+  }
+
+  .button-image{
+    max-width: 950px;
+  }
+
+  .button-send-message{
+    width: 310px;
+  }
 }
 
 @media(max-width: 990px){
   .menu-button{
     display: block;
+    margin-top: 20px;
+    margin-right: 30px;
+  }
+
+  .header{
+    display: flex;
+    justify-content: flex-end;
   }
   
   .logo{
@@ -897,17 +1039,245 @@
   .menu-link{
     font-size: 24px;
   }
+
+  .description-text{
+    margin-top: 70px;
+  }
+
+  .restaurant-menu{
+    display: block;
+  }
+
+  .pricelist-text-bold{
+    font-size: 18px;
+  }
+
+  .pricelist-text-normal{
+    font-size: 12px;
+  }
+
+  .item-border:not(:last-child) {
+    margin-right: 20px;
+  }
+
+  .delicious-menu{
+    margin-top: 0;
+  }
+
+  .menu-block{
+    padding-top: 50px;
+  }
+
+  .restaurant-menu{
+    margin-bottom: 50px;
+  }
+
+  .img-events{
+    width: 90%;
+  }
+
+  .header-events{
+    height: 100px;
+  }
+
+  .footer-events{
+    margin-top: 84px;  
+  }
+
+  .contact-information{
+    display: flex;
+    flex-direction: column;
+    max-width: 560px;
+  }
+
+  .input-contact{
+    width: 560px;
+    margin-bottom: 10px;
+    margin-left: 0;
+  }
+
+  .input-contact:last-child{
+    width: 560px;
+    margin-top: 0;
+  }
+
+  .button-image{
+    max-width: 560px;
+    margin: auto;
+    display: block;
+    margin-bottom: 50px;
+  }
+
+  .button-img{
+    width: 100%;
+  }
+
+  .button-send-message{
+    margin-top: 10px;
+    width: 560px;
+    margin-left: 0;
+  }
 }
 
 @media(max-width: 760px){
   .name-text{
     font-size: 71px;
   }
+
+  .name-block{
+    font-size: 30px;
+  }
+
+  .text-bold{
+    padding-right: 40px;
+    padding-left: 40px;
+  }
+
+  .text-normal{
+    padding-right: 60px;
+    padding-left: 60px;
+  }
+
+  .block-img{
+    width: 38%;
+  }
+
+  .information-block{
+    width: 350px;
+  }
+
+  .button-success{
+    width: 350px;
+  }
+
+  .navbar-delicious-menu{
+    max-width: 260px;
+    margin: auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .delicious{
+    display: grid;
+    grid-template-columns: 6fr 6fr;
+    grid-column-gap: 0px;
+  }
+  
+  .delicious-item{
+    justify-content: flex-start;
+  }
+
+  .item-border:not(:last-child) {
+    margin-right: 0px;
+    border: none;
+  }
+
+  .delicious-link{
+    border-bottom: 1px solid rgba(51, 51, 51, 0.2); 
+  }
+
+  .item-left{
+    justify-content: center;
+    margin-right: 20px;
+  }
+
+  .item-right{
+    justify-content: center;
+  }
+
+  .delicious-link{
+    margin: 0;
+  }
+
+  .end-child{
+    display: none;
+  }
+
+  .delicious-item-clone{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .delicious-item{
+    width: 75px;
+  }
+
+  .events{
+    display: block;
+  }
+
+  .header-events{
+    height: 50px;
+  }
+
+  .img-events{
+    width: 36%;
+  }
+
+  .footer-events{
+    margin: 0;
+  }
 }
 
 @media(max-width: 600px){
+  .container{
+    max-width: 576px;
+  }
+
   .name-text{
     font-size: 56px;
+  }
+
+  .block-text{
+    width: auto;
+  }
+
+  .text-bold{
+    font-size: 14px;
+  }
+
+  .text-normal{
+    font-size: 12px;
+  }
+
+  .img-events{
+    width: 48%;
+  }
+
+  .contact-information{
+    display: flex;
+    flex-direction: column;
+    max-width: 260px;
+  }
+
+  .input-contact{
+    width: 260px;
+    margin-bottom: 10px;
+    margin-left: 0;
+  }
+
+  .input-contact:last-child{
+    width: 260px;
+    margin-top: 0;
+  }
+
+  .button-image{
+    max-width: 260px;
+    margin: auto;
+    display: block;
+    margin-bottom: 50px;
+  }
+
+  .button-img{
+    width: 100%;
+  }
+
+  .button-send-message{
+    margin-top: 10px;
+    width: 260px;
+    margin-left: 0;
   }
 }
 
@@ -931,5 +1301,69 @@
   .button-explore{
     margin-top: 15px;
     margin-left: 0;
+  }
+
+  .social-button:not(:nth-child(2)){
+    margin-left: 40px;
+  }
+
+  .main-block{
+    padding-top: 4px;
+    padding-bottom: 30px;
+  }
+
+  .information-block{
+    width: 250px;
+  }
+
+  .button-success{
+    width: 250px;
+  }
+
+  .footer-text{
+    padding-right: 25px;
+    padding-left: 25px;
+  }
+
+  .swiper-slide{
+    padding-bottom: 30px;
+  }
+
+  .name-block{
+    font-size: 26px;
+  }
+
+  .pricelist-text-bold{
+    font-size: 14px;
+  }
+
+  .pricelist-text-normal{
+    font-size: 10px;
+  }
+
+  .text-block{
+    width: auto;
+  }
+
+  .navbar-delicious-menu{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+}
+
+@media(max-width: 360px){
+  .img-events{
+    width: 73%;
+  }
+
+  .block-galerie{
+    display: block;
+    height: 1396px;
+  }
+
+  .galerie-img{
+    width: 100%;
+    margin-top: -4px;
   }
 }
